--- a/khitma/src/app/pages/group/group-invite/group-invite.component.html
+++ b/khitma/src/app/pages/group/group-invite/group-invite.component.html
@@ -1,1 +1,12 @@
-<p>groupId: {{groupId}}</p>
+<div *ngIf="group">
+    <p>{{group.title}}</p>
+
+
+    <p>{{group.title}}</p>
+
+
+</div>
+
+
+
+هل انتهت الختمة؟
