--- a/khitma/src/app/pages/home/create-group/create-group.component.html
+++ b/khitma/src/app/pages/home/create-group/create-group.component.html
@@ -14,7 +14,7 @@
         <textarea matInput [(ngModel)]="description" name="description"></textarea>
     </mat-form-field>
 
-    <button type="submit" class="save" mat-raised-button color="{{createGroupForm.form.valid ? 'accent' : ''}}"
+    <button type="submit" class="block" mat-raised-button color="{{createGroupForm.form.valid ? 'accent' : ''}}"
         [disabled]="!createGroupForm.form.valid">إنشاء
         مجموعة الختمة</button>
 
