--- a/khitma/src/app/pages/create-group/group-invite/group-invite.component.scss
+++ b/khitma/src/app/pages/create-group/group-invite/group-invite.component.scss
@@ -1,5 +1,9 @@
-:host {
+:host > div {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  > * {
+    margin: 20px auto;
+  }
 }
