--- a/khitma/src/app/shared/khitma-info/khitma-info.component.html
+++ b/khitma/src/app/shared/khitma-info/khitma-info.component.html
@@ -6,4 +6,7 @@
     <mat-card-content>
         {{group.description}}
     </mat-card-content>
+
+    <span *ngIf="showLink">{{groupLink}}</span>
+
 </mat-card>
