--- a/khitma/src/app/pages/home/home.component.html
+++ b/khitma/src/app/pages/home/home.component.html
@@ -1,14 +1,11 @@
-<div>
-    <mat-card>
+<mat-card>
 
-        <mat-card-title>ختمة جديدة</mat-card-title>
+    <mat-card-title>ختمة جديدة</mat-card-title>
 
-        <!-- <mat-card-subtitle>يمكنك إنشاء ختمة جديدة </mat-card-subtitle> -->
+    <!-- <mat-card-subtitle>يمكنك إنشاء ختمة جديدة </mat-card-subtitle> -->
 
-        <mat-card-content>
-            <app-create-group></app-create-group>
+    <mat-card-content>
+        <app-create-group (groupCreated)="groupCreated($event)"></app-create-group>
 
-        </mat-card-content>
-    </mat-card>
-
-</div>
+    </mat-card-content>
+</mat-card>
