--- a/khitma/src/app/pages/home/home.component.html
+++ b/khitma/src/app/pages/home/home.component.html
@@ -1,11 +1,21 @@
 <mat-card>
 
-    <mat-card-title>ختمة جديدة</mat-card-title>
+    <mat-card-title></mat-card-title>
 
     <!-- <mat-card-subtitle>يمكنك إنشاء ختمة جديدة </mat-card-subtitle> -->
 
     <mat-card-content>
-        <app-create-group (groupCreated)="groupCreated($event)"></app-create-group>
+        <!-- <app-create-group (groupCreated)="groupCreated($event)"></app-create-group> -->
+
+
+
+
+        <a mat-raised-button color="accent" class="block" href="/new">ختمة جديدة</a>
+
+
 
     </mat-card-content>
+
+
+
 </mat-card>
