--- a/khitma/src/app/shared/juz-list/juz-list.component.html
+++ b/khitma/src/app/shared/juz-list/juz-list.component.html
@@ -1,1 +1,1 @@
-<app-juz *ngFor="let juz of ajza" [juz]="juz"></app-juz>
+<app-juz *ngFor="let juz of ajza" [juz]="juz" (click)="juzClicked(juz)"></app-juz>
