--- a/khitma/src/app/shared/juz-list/juz-list.component.scss
+++ b/khitma/src/app/shared/juz-list/juz-list.component.scss
@@ -1,5 +1,5 @@
-:host {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+// :host {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+// }
