--- a/khitma/src/app/app.component.scss
+++ b/khitma/src/app/app.component.scss
@@ -1,11 +1,15 @@
 .content {
   padding: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
 }
 
 .block {
   display: block;
   width: 100%;
+}
+
+mat-card {
+  margin: 16px auto;
 }
