--- a/khitma/src/app/shared/juz/juz.component.html
+++ b/khitma/src/app/shared/juz/juz.component.html
@@ -1,7 +1,6 @@
-<div>
+<div class="juz" [ngClass]="stateClass">
 
     <span class="index">{{juz.index+1}}</span>
-
 
     <span class="owner"> {{juz.owner}}</span>
 
