--- a/khitma/src/app/pages/home/home.component.html
+++ b/khitma/src/app/pages/home/home.component.html
@@ -1,21 +1,6 @@
-<mat-card>
+<div class="home">
+    <p>موقع ختمة.نت هو موقع مجّاني يتيح إنشاء مجموعات لختم القرآن الكريم بشكل جماعي ويسهّل المتابعة المجاموعة.</p>
 
-    <mat-card-title></mat-card-title>
+    <a mat-raised-button color="accent" class="block" href="/new">ختمة جديدة</a>
 
-    <!-- <mat-card-subtitle>يمكنك إنشاء ختمة جديدة </mat-card-subtitle> -->
-
-    <mat-card-content>
-        <!-- <app-create-group (groupCreated)="groupCreated($event)"></app-create-group> -->
-
-
-
-
-        <a mat-raised-button color="accent" class="block" href="/new">ختمة جديدة</a>
-
-
-
-    </mat-card-content>
-
-
-
-</mat-card>
+</div>
