--- a/khitma/src/app/shared/juz/juz.component.scss
+++ b/khitma/src/app/shared/juz/juz.component.scss
@@ -25,7 +25,7 @@
 
 .juz.my-juz {
   // background-color: #90d8f0;
-  font-size: 150%;
+  // font-size: 150%;
   background-color: #3f51b5;
   color: white;
 }
