--- a/khitma/src/app/app.component.scss
+++ b/khitma/src/app/app.component.scss
@@ -1,11 +1,38 @@
 .content {
-  padding: 20px;
+  padding: 32px;
   // display: flex;
   // flex-direction: column;
   // align-items: center;
+  overflow-x: hidden;
 }
 
 .block {
   display: block;
   width: 100%;
+}
+
+mat-toolbar a {
+  text-decoration: none;
+  color: white;
+}
+
+button,
+a {
+  font-size: 1.1em !important;
+  padding: 32px 0 !important;
+}
+
+mat-label {
+  padding-bottom: 5px;
+  display: inline-block;
+}
+
+input {
+  height: 40px;
+  line-height: 40px;
+}
+
+textarea {
+  line-height: 40px;
+  height: 160px;
 }
