--- a/khitma/src/styles.scss
+++ b/khitma/src/styles.scss
@@ -3,8 +3,9 @@
 html,
 body {
   height: 100%;
-}
-body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-size: 100% !important;
+  line-height: 150% !important;
+  overflow-x: hidden;
 }
