--- a/khitma/src/app/pages/home/home.component.html
+++ b/khitma/src/app/pages/home/home.component.html
@@ -1,5 +1,11 @@
 <div class="home">
-    <p>موقع ختمة.نت هو موقع مجّاني يتيح إنشاء مجموعات لختم القرآن الكريم بشكل جماعي ويسهّل المتابعة المجاموعة.</p>
+    <p>
+
+        يتيح ختمة.نت إنشاء وإدارة مجموعات لختم القرآن الكريم بشكل جماعي. حيث يمكن بسهولة إنشاء مجموعة ختمة جديدة ثمّ
+        دعوة أعضاء المجموعة للإنضمام ومتابعة تقدّم الختمة بشكل مباشر ومتاح للجميع. أنشئوا مجموعكم الآن ولا تنسونا من
+        دعائكم إن شاء الله.
+
+    </p>
 
     <a mat-raised-button color="accent" class="block" href="/new">ختمة جديدة</a>
 
