--- a/khitma/src/app/shared/juz-list/juz-list.component.html
+++ b/khitma/src/app/shared/juz-list/juz-list.component.html
@@ -1,4 +1,4 @@
 <section [ngClass]="{'has-juz': myJuzIndex>=0}">
-    <app-juz *ngFor="let juz of ajza" [juz]="juz" [isMyJuz]="juz.index == myJuzIndex" (click)="juzClicked(juz)">
+    <app-juz *ngFor="let juz of ajza" [juz]="juz" [myJuzIndex]="myJuzIndex" (click)="juzClicked(juz)">
     </app-juz>
 </section>
