--- a/khitma/src/app/app.component.scss
+++ b/khitma/src/app/app.component.scss
@@ -18,7 +18,7 @@ mat-toolbar a {
 
 button,
 a {
-  font-size: 1.1em !important;
+  // font-size: 1.1em !important;
   padding: 32px 0 !important;
 }
 
