--- a/khitma/src/app/shared/juz-grid/juz-grid.component.html
+++ b/khitma/src/app/shared/juz-grid/juz-grid.component.html
@@ -1,6 +1,6 @@
 <section dir="ltr" [ngClass]="{'has-juz': myJuzIndex>=0}" fxLayout="row wrap" fxLayoutGap="16px grid">
     <div *ngFor="let juz of ajza" fxFlex="10%" style="text-align:center">
-        <app-juz-toggle [juz]="juz" [isMyJuz]="juz.index == myJuzIndex" (click)="juzClicked(juz)">
+        <app-juz-toggle [juz]="juz" [myJuzIndex]="myJuzIndex" (click)="juzClicked(juz)">
         </app-juz-toggle>
     </div>
 </section>
