--- a/khitma/src/app/shared/khitma-info/khitma-info.component.html
+++ b/khitma/src/app/shared/khitma-info/khitma-info.component.html
@@ -1,7 +1,7 @@
 <section *ngIf="group" class="khitma-info">
     <header class="title">{{group.title}}</header>
 
-    <label class="subtitle"> مُنشئ الختمة: {{group.author}} </label>
+    <label class="author"> مُنشئ الختمة: {{group.author}} </label>
 
     <p class="description">
         {{group.description}}
