--- a/khitma/src/app/shared/khitma-info/khitma-info.component.scss
+++ b/khitma/src/app/shared/khitma-info/khitma-info.component.scss
@@ -8,8 +8,9 @@
     margin-bottom: 8px;
   }
 
-  .subtitle {
-    margin-bottom: 8px;
+  .author {
+    margin-bottom: 16px;
+    display: block;
   }
 
   .description {
