--- a/khitma/src/app/app.component.scss
+++ b/khitma/src/app/app.component.scss
@@ -36,3 +36,15 @@ textarea {
   line-height: 40px;
   height: 160px;
 }
+
+section {
+  margin: 32px 0;
+
+  > header {
+    text-align: center;
+    font-size: 150%;
+    font-weight: bold;
+    padding: 20px;
+    margin-bottom: -16px;
+  }
+}
