--- a/khitma/src/app/pages/group/group-join/group-join.component.html
+++ b/khitma/src/app/pages/group/group-join/group-join.component.html
@@ -1,15 +1,13 @@
 <app-khitma-info [group]="group"></app-khitma-info>
 
-هل انتهت الختمة؟
-
 <mat-card>
     <mat-card-content>
 
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" class="block">
             <mat-label>اسمك</mat-label>
             <input matInput [(ngModel)]="username" name="title" required="true">
         </mat-form-field>
 
-        <button class="block" mat-raised-button color="accent" (click)="join()">الإنضمام للختمة</button>
+        <button class="block join-btn" mat-raised-button color="accent" (click)="join()">الإنضمام للختمة</button>
     </mat-card-content>
 </mat-card>
