--- a/khitma/src/app/app.component.scss
+++ b/khitma/src/app/app.component.scss
@@ -16,11 +16,11 @@ mat-toolbar a {
   color: white;
 }
 
-button,
-a {
-  // font-size: 1.1em !important;
-  padding: 32px 0 !important;
-}
+// button,
+// a {
+//   // font-size: 1.1em !important;
+//   padding: 32px 0 !important;
+// }
 
 mat-label {
   padding-bottom: 5px;
