analytics  + islamic colors +msgs

--- a/khitma/src/app/app.component.html
+++ b/khitma/src/app/app.component.html
@@ -1,5 +1,11 @@
 <mat-toolbar color="primary">
   <span><a href="/">ختمة.نت</a></span>
+
+  <span class="spacer"></span>
+
+  <a mat-raised-button color="accent" class="app-btn-primary" href="/">مجموعاتي</a>
+
+
 </mat-toolbar>
 
 
