--- a/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
+++ b/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
@@ -26,7 +26,7 @@
 
 
             <!-- جزؤك الحالي:  -->
-            <button mat-raised-button color="accent" class="done-btn" (click)="juzDone()"
+            <button mat-raised-button color="accent" class="done-btn app-btn-primary" (click)="juzDone()"
                 [disabled]="myJuzIndex == null">
                 أتممت قراءة جزئي</button>
 
