--- a/khitma/src/app/pages/home/home.component.html
+++ b/khitma/src/app/pages/home/home.component.html
@@ -2,12 +2,12 @@
     <p>
 
         يتيح ختمة.نت إنشاء وإدارة مجموعات لختم القرآن الكريم بشكل جماعي. حيث يمكن بسهولة إنشاء مجموعة ختمة جديدة ثمّ
-        دعوة أعضاء المجموعة للإنضمام ومتابعة تقدّم الختمة بشكل مباشر ومتاح للجميع. أنشئوا مجموعكم الآن ولا تنسونا من
+        دعوة أعضاء المجموعة للإنضمام ومتابعة تقدّم الختمة بشكل مباشر ومتاح للجميع. أنشئوا مجموعتكم الآن ولا تنسونا من
         دعائكم إن شاء الله.
 
     </p>
 
-    <a mat-raised-button color="accent" class="block create-btn" href="/new">ختمة جديدة</a>
+    <a mat-raised-button color="accent" class="block create-btn app-btn-primary" href="/new">ختمة جديدة</a>
 
 
 
