--- a/khitma/src/app/shared/celebration/celebration.component.html
+++ b/khitma/src/app/shared/celebration/celebration.component.html
@@ -1,15 +1,41 @@
 <div class="confetti">
-    <div class="confetti-piece"></div>
-    <div class="confetti-piece"></div>
-    <div class="confetti-piece"></div>
-    <div class="confetti-piece"></div>
-    <div class="confetti-piece"></div>
-    <div class="confetti-piece"></div>
-    <div class="confetti-piece"></div>
-    <div class="confetti-piece"></div>
-    <div class="confetti-piece"></div>
-    <div class="confetti-piece"></div>
-    <div class="confetti-piece"></div>
-    <div class="confetti-piece"></div>
-    <div class="confetti-piece"></div>
+    <div class="confetti-piece">
+        <mat-icon>grade</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>grade</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>grade</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>grade</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>grade</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>grade</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>grade</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>grade</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>grade</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>grade</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>grade</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>grade</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>grade</mat-icon>
+    </div>
 </div>
