--- a/khitma/src/app/shared/celebration/celebration.component.scss
+++ b/khitma/src/app/shared/celebration/celebration.component.scss
@@ -8,12 +8,13 @@
   overflow: hidden;
   z-index: 1000;
 }
+
 .confetti-piece {
   position: absolute;
   width: 10px;
   height: 30px;
-  background: #ffd300;
-  top: 0;
+  color: #ffdd94;
+  top: -50px;
   opacity: 0;
 }
 .confetti-piece:nth-child(1) {
@@ -108,7 +109,7 @@
   animation-duration: 818ms;
 }
 .confetti-piece:nth-child(odd) {
-  background: #7431e8;
+  color: #d0e6a5;
 }
 .confetti-piece:nth-child(even) {
   z-index: 1;
@@ -125,7 +126,7 @@
   animation-delay: 1000ms;
 }
 .confetti-piece:nth-child(4n-7) {
-  background: red;
+  color: #3f51b5;
 }
 
 @keyframes makeItRain {
@@ -138,4 +139,8 @@
   to {
     transform: translateY(350px);
   }
+}
+
+.confetti-piece {
+  color: #614316 !important;
 }
