--- a/khitma/src/app/shared/juz/juz.component.scss
+++ b/khitma/src/app/shared/juz/juz.component.scss
@@ -22,7 +22,7 @@
 .juz.list-item.my-juz .index {
   // background-color: #90d8f0;
   // font-size: 150%;
-  background-color: #3f51b5;
+  background-color: #614316;
   color: white;
 }
 
@@ -34,7 +34,7 @@
   margin-left: 8px;
   position: relative;
   display: inline-block;
-  border: 1px solid #e5e5e5;
+  // border: 1px solid #e5e5e5;
   width: 25px;
   height: 25px;
   line-height: 25px;
@@ -58,12 +58,12 @@
 }
 
 .juz.list-item.my-juz {
-  background-color: #3f51b5;
+  background-color: #614316;
   color: white;
   .index {
     // background-color: #90d8f0;
     // font-size: 150%;
-    color: #3f51b5;
+    color: #614316;
     background-color: white;
   }
 }
