--- a/khitma/src/app/pages/create-group/create-group.component.html
+++ b/khitma/src/app/pages/create-group/create-group.component.html
@@ -14,8 +14,8 @@
         <textarea matInput [(ngModel)]="description" name="description"></textarea>
     </mat-form-field>
 
-    <button type="submit" class="block" mat-raised-button color="{{createGroupForm.form.valid ? 'accent' : ''}}"
-        [disabled]="!createGroupForm.form.valid">إنشاء
+    <button type="submit" class="block app-btn-primary" mat-raised-button
+        color="{{createGroupForm.form.valid ? 'accent' : ''}}" [disabled]="!createGroupForm.form.valid">إنشاء
         مجموعة الختمة</button>
 
 </form>
