--- a/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.scss
+++ b/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.scss
@@ -14,7 +14,7 @@ button {
   height: 70px;
   line-height: 70px !important;
   padding: 0 16px !important;
-  background-color: #0cc078 !important;
+  // background-color: #0cc078 !important;
   font-weight: bold;
 }
 
@@ -26,7 +26,7 @@ button {
   font-weight: bold;
 
   span {
-    color: #3f51b5;
+    color: #614316;
     margin-top: 5px;
     display: block;
   }
