--- a/khitma/src/app/shared/confirm-dialog/confirm-dialog.component.html
+++ b/khitma/src/app/shared/confirm-dialog/confirm-dialog.component.html
@@ -8,5 +8,5 @@
 
 <div mat-dialog-actions>
     <button mat-button (click)="onDismiss()">لا</button>
-    <button mat-raised-button color="primary" (click)="onConfirm()">نعم</button>
+    <button mat-raised-button color="primary" class="app-btn-primary" (click)="onConfirm()">نعم</button>
 </div>
