--- a/khitma/src/app/shared/juz-toggle/juz-toggle.component.html
+++ b/khitma/src/app/shared/juz-toggle/juz-toggle.component.html
@@ -1,3 +1,3 @@
-<span class="juz toggle" [ngClass]="getCssClasses()">
+<span class="juz-toggle" [ngClass]="getCssClasses()">
     {{juz.index + 1}}
 </span>
