--- a/khitma/src/styles.scss
+++ b/khitma/src/styles.scss
@@ -12,7 +12,7 @@ body {
   // font-size: 100% !important;
   line-height: 150% !important;
   overflow-x: hidden;
-  background-color: #fafafa;
+  background-color: #fffef6;
   // font-size: larger;
 }
 
