--- a/khitma/src/app/shared/celebration/celebration.component.html
+++ b/khitma/src/app/shared/celebration/celebration.component.html
@@ -3,37 +3,40 @@
         <mat-icon>grade</mat-icon>
     </div>
     <div class="confetti-piece">
-        <mat-icon>grade</mat-icon>
+        <mat-icon>brightness_3</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <label>بارك الله بك</label>
+    </div>
+    <div class="confetti-piece">
+        <label>جزاك الله خيرا</label>
+
     </div>
     <div class="confetti-piece">
         <mat-icon>grade</mat-icon>
     </div>
     <div class="confetti-piece">
-        <mat-icon>grade</mat-icon>
+        <mat-icon>brightness_3</mat-icon>
     </div>
     <div class="confetti-piece">
         <mat-icon>grade</mat-icon>
     </div>
     <div class="confetti-piece">
-        <mat-icon>grade</mat-icon>
+        <label>في ميزان حسناتك</label>
+
     </div>
     <div class="confetti-piece">
         <mat-icon>grade</mat-icon>
     </div>
     <div class="confetti-piece">
-        <mat-icon>grade</mat-icon>
+        <mat-icon>brightness_3</mat-icon>
     </div>
     <div class="confetti-piece">
         <mat-icon>grade</mat-icon>
     </div>
     <div class="confetti-piece">
-        <mat-icon>grade</mat-icon>
-    </div>
-    <div class="confetti-piece">
-        <mat-icon>grade</mat-icon>
-    </div>
-    <div class="confetti-piece">
-        <mat-icon>grade</mat-icon>
+        <label>تقبّل الله</label>
+
     </div>
     <div class="confetti-piece">
         <mat-icon>grade</mat-icon>
