group remove + khitma page title

--- a/khitma/src/app/app.component.scss
+++ b/khitma/src/app/app.component.scss
@@ -64,3 +64,9 @@ mat-toolbar {
 .app-btn-primary[disabled="true"] {
   background-color: lightgray !important;
 }
+
+.center-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
