--- a/khitma/src/app/app.component.html
+++ b/khitma/src/app/app.component.html
@@ -3,7 +3,13 @@
 
   <span class="spacer"></span>
 
+  <a mat-raised-button color="accent" href="/">
+    <mat-icon>system_update</mat-icon>
+  </a>
+
+
   <a mat-raised-button color="accent" class="app-btn-primary" href="/">مجموعاتي</a>
+
 
 
 </mat-toolbar>
