--- a/khitma/src/app/app.component.scss
+++ b/khitma/src/app/app.component.scss
@@ -70,3 +70,9 @@ mat-toolbar {
   align-items: center;
   justify-content: center;
 }
+
+.pwa-btn {
+  background: #d3bd67;
+  margin-left: 16px !important;
+  color: white;
+}
